# rss-ai-analyzer

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
docker/: Dockerfile  docker-compose.yml
src/: app.py
src/rss_analyzer/: __init__.py  exceptions.py
src/rss_analyzer/feed/: __init__.py  feed.py
tests/rss_analyzer/: conftest.py
tests/rss_analyzer/feed/: test_feed.py
